Fix center alignment not working.

--- a/resources/scss/editor.scss
+++ b/resources/scss/editor.scss
@@ -171,6 +171,11 @@
 	}
 }
 
+.edit-post-visual-editor.editor-styles-wrapper .wp-block[data-align="center"] figure {
+	margin-left: auto;
+	margin-right: auto;
+}
+
 // Media text fixes.
 
 // Add appropriate padding to left/right.
