--- a/resources/scss/utilities/_alignment.scss
+++ b/resources/scss/utilities/_alignment.scss
@@ -42,6 +42,11 @@
 	margin-right: auto;
 	text-align:   center;
 	clear:        both;
+
+	> img {
+		margin-left: auto;
+		margin-right: auto;
+	}
 }
 
 // Align full and wide classes.
